--- a/miscellaneous_dockerfiles/Dockerfile.common
+++ b/miscellaneous_dockerfiles/Dockerfile.common
@@ -4,4 +4,4 @@ ARG PRE_PUSH_IMAGE=""
 FROM $PRE_PUSH_IMAGE
 
 # Copy safety report generated from PRE_PUSH_IMAGE to docker image
-COPY safety_report.json /opt/aws/dlc/info/safety_report.json
+# COPY safety_report.json /opt/aws/dlc/info/safety_report.json
