--- a/huggingface/pytorch/training/docker/2.2/py3/cu121/Dockerfile.gpu
+++ b/huggingface/pytorch/training/docker/2.2/py3/cu121/Dockerfile.gpu
@@ -12,11 +12,13 @@ ARG TRANSFORMERS_VERSION
 ARG DATASETS_VERSION
 ARG DIFFUSERS_VERSION=0.27.2
 ARG EVALUATE_VERSION=0.4.2
-ARG ACCELERATE_VERSION=0.29.3
-ARG TRL_VERSION=0.8.6
-ARG PEFT_VERSION=0.10.0
+ARG ACCELERATE_VERSION=0.31.0
+ARG TRL_VERSION=0.9.4
+ARG PEFT_VERSION=0.11.1
 ARG FLASH_ATTN_VERSION=2.5.8
+ARG BITS_ANDBYTES_VERSION=0.43.1
 ARG PYTHON=python3
+ARG XFORMERS_VERSION=0.0.26.post1
 
 # TODO: Remove when the base image is updated
 RUN pip install --upgrade pip \
@@ -30,13 +32,14 @@ RUN pip install --no-cache-dir \
 	diffusers==${DIFFUSERS_VERSION} \
 	Jinja2 \
 	tensorboard \
-	bitsandbytes \
+	bitsandbytes==${BITS_ANDBYTES_VERSION} \
 	evaluate==${EVALUATE_VERSION} \
 	accelerate==${ACCELERATE_VERSION} \
 	trl==${TRL_VERSION} \
 	peft==${PEFT_VERSION} \
 	ninja \
-	flash-attn==${FLASH_ATTN_VERSION}
+	flash-attn==${FLASH_ATTN_VERSION} \
+	xformers==${XFORMERS_VERSION}
 
 ENV EIGEN3_INCLUDE_DIR=/usr/include/eigen3 \
 	BZIP2_INCLUDE_DIR=/usr/include \
@@ -49,7 +52,7 @@ RUN apt-get update \
  && apt-get -y upgrade --only-upgrade systemd openssl cryptsetup \
  && apt-get install -y git-lfs \
     build-essential \
-    cmake \ 
+    cmake \
     libboost-system-dev \
     libboost-thread-dev \
     libboost-program-options-dev \
@@ -60,6 +63,8 @@ RUN apt-get update \
     liblzma-dev \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
+
+RUN pip install "unsloth @ git+https://github.com/unslothai/unsloth.git"
 
 # RUN HOME_DIR=/root \
 #  && curl -o ${HOME_DIR}/oss_compliance.zip https://aws-dlinfra-utilities.s3.amazonaws.com/oss_compliance.zip \
