--- a/huggingface/pytorch/inference/docker/2.2/py3/cu118/Dockerfile.gpu
+++ b/huggingface/pytorch/inference/docker/2.2/py3/cu118/Dockerfile.gpu
@@ -21,12 +21,9 @@ ARG NVML_VERSION=11.8.86
 
 # PyTorch Binaries and versions.
 ARG TORCH_URL=https://framework-binaries.s3.us-west-2.amazonaws.com/pytorch/v2.2.0/cuda11.8.0/torch-2.2.0%2Bcu118-cp310-cp310-linux_x86_64.whl
-ARG TORCHVISION_URL=https://framework-binaries.s3.us-west-2.amazonaws.com/pytorch/v2.2.0/cuda11.8.0/torchvision-0.17.0%2Bcu118-cp310-cp310-linux_x86_64.whl
-ARG TORCHAUDIO_URL=https://framework-binaries.s3.us-west-2.amazonaws.com/pytorch/v2.2.0/cuda11.8.0/torchaudio-2.2.0%2Bcu118-cp310-cp310-linux_x86_64.whl
 
 # HF ARGS
 ARG TRANSFORMERS_VERSION
-ARG DIFFUSERS_VERSION=0.27.2
 ARG PEFT_VERSION=0.11.1
 ARG ACCELERATE_VERSION=0.31.0
 ARG XFORMERS_VERSION=0.0.26.post1
@@ -196,9 +193,7 @@ RUN pip uninstall -y torch torchvision torchaudio model-archiver multi-model-ser
 RUN pip install --no-cache-dir -U \
     # triton required for torch inductor
     triton==2.2.0 \
-    ${TORCH_URL} \
-    ${TORCHVISION_URL} \
-    ${TORCHAUDIO_URL}
+    ${TORCH_URL}
 
 # add necessary certificate for aws sdk cpp download
 RUN mkdir -p /etc/pki/tls/certs && cp /etc/ssl/certs/ca-certificates.crt /etc/pki/tls/certs/ca-bundle.crt
@@ -235,8 +230,7 @@ RUN curl -o /license.txt  https://aws-dlc-licenses.s3.amazonaws.com/pytorch-2.0/
 
 # install Hugging Face libraries and its dependencies
 RUN pip install --no-cache-dir \
-    transformers[sentencepiece,audio,vision]==${TRANSFORMERS_VERSION} \
-    diffusers==${DIFFUSERS_VERSION} \
+    transformers[sentencepiece]==${TRANSFORMERS_VERSION} \
     peft==${PEFT_VERSION} \
     accelerate==${ACCELERATE_VERSION} \
     xformers==${XFORMERS_VERSION} \
